--- a/public/output.css
+++ b/public/output.css
@@ -619,6 +619,10 @@ video {
   top: 4.3rem;
 }
 
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -647,8 +651,28 @@ video {
   margin-top: 0.25rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-11 {
+  margin-top: 2.75rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
+.mt-\[\.1rem\] {
+  margin-top: .1rem;
 }
 
 .mt-\[\.35rem\] {
@@ -663,56 +687,32 @@ video {
   margin-top: .65rem;
 }
 
-.mt-\[3\.12rem\] {
-  margin-top: 3.12rem;
-}
-
-.ml-3 {
-  margin-left: 0.75rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-\[\.1rem\] {
-  margin-top: .1rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mt-\[1\.2rem\] {
   margin-top: 1.2rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
-}
-
-.mt-28 {
-  margin-top: 7rem;
-}
-
-.mt-24 {
-  margin-top: 6rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-\[5\.5rem\] {
-  margin-top: 5.5rem;
+.mt-\[3\.12rem\] {
+  margin-top: 3.12rem;
 }
 
 .mt-\[5\.7rem\] {
   margin-top: 5.7rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -740,12 +740,8 @@ video {
   height: 2.25rem;
 }
 
-.h-\[4\.7rem\] {
-  height: 4.7rem;
-}
-
-.h-3 {
-  height: 0.75rem;
+.h-screen {
+  height: 100vh;
 }
 
 .w-14 {
@@ -754,6 +750,10 @@ video {
 
 .w-64 {
   width: 16rem;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .w-8 {
@@ -768,8 +768,8 @@ video {
   width: 4.15rem;
 }
 
-.w-\[4\.24rem\] {
-  width: 4.24rem;
+.w-\[4\.3rem\] {
+  width: 4.3rem;
 }
 
 .w-\[8\.15rem\] {
@@ -780,52 +780,36 @@ video {
   width: 100%;
 }
 
-.w-10 {
-  width: 2.5rem;
+.w-20 {
+  width: 5rem;
 }
 
-.w-5 {
-  width: 1.25rem;
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-16 {
   width: 4rem;
 }
 
-.w-12 {
-  width: 3rem;
+.w-36 {
+  width: 9rem;
 }
 
-.w-1 {
-  width: 0.25rem;
+.w-44 {
+  width: 11rem;
 }
 
-.w-4 {
-  width: 1rem;
+.w-52 {
+  width: 13rem;
 }
 
-.w-6 {
-  width: 1.5rem;
+.w-56 {
+  width: 14rem;
 }
 
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-\[4\.3rem\] {
-  width: 4.3rem;
-}
-
-.w-\[4\.2rem\] {
-  width: 4.2rem;
-}
-
-.w-\[4\.1rem\] {
-  width: 4.1rem;
-}
-
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -927,6 +911,14 @@ video {
   line-height: 2rem;
 }
 
+.text-\[1\.08rem\] {
+  font-size: 1.08rem;
+}
+
+.text-\[1\.1rem\] {
+  font-size: 1.1rem;
+}
+
 .text-\[1\.28rem\] {
   font-size: 1.28rem;
 }
@@ -951,8 +943,18 @@ video {
   font-size: 2rem;
 }
 
-.text-\[1\.5rem\] {
-  font-size: 1.5rem;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .font-medium {
