--- a/public/output.css
+++ b/public/output.css
@@ -667,6 +667,10 @@ video {
   margin-top: 6rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-7 {
   margin-top: 1.75rem;
 }
@@ -699,12 +703,8 @@ video {
   margin-top: 5.7rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .flex {
@@ -744,6 +744,22 @@ video {
   height: 100vh;
 }
 
+.h-\[3\.15rem\] {
+  height: 3.15rem;
+}
+
+.h-\[3\.13rem\] {
+  height: 3.13rem;
+}
+
+.h-\[3\.1rem\] {
+  height: 3.1rem;
+}
+
+.h-\[3rem\] {
+  height: 3rem;
+}
+
 .w-14 {
   width: 3.5rem;
 }
@@ -780,34 +796,6 @@ video {
   width: 100%;
 }
 
-.w-20 {
-  width: 5rem;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
-.w-44 {
-  width: 11rem;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
-.w-56 {
-  width: 14rem;
-}
-
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -832,20 +820,16 @@ video {
   border-radius: .225rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
 }
 
-.border-\[1px\] {
-  border-width: 1px;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
-.border-2 {
-  border-width: 2px;
+.border-\[1px\] {
+  border-width: 1px;
 }
 
 .border-solid {
@@ -862,6 +846,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.bg-\[\#161616\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 22 22 / var(--tw-bg-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -875,19 +864,6 @@ video {
 .bg-blue-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(76 95 213 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#00000060\] {
-  background-color: #00000060;
-}
-
-.bg-\[\#00000030\] {
-  background-color: #00000030;
-}
-
-.bg-\[\#161616\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 22 22 / var(--tw-bg-opacity));
 }
 
 .px-12 {
@@ -920,19 +896,9 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-24 {
-  padding-left: 6rem;
-  padding-right: 6rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-\[\.9rem\] {
@@ -972,6 +938,10 @@ video {
   font-size: 1.29rem;
 }
 
+.text-\[1\.39rem\] {
+  font-size: 1.39rem;
+}
+
 .text-\[1\.45rem\] {
   font-size: 1.45rem;
 }
@@ -998,12 +968,16 @@ video {
   line-height: 1.75rem;
 }
 
-.text-\[1\.3rem\] {
-  font-size: 1.3rem;
-}
-
 .text-\[1\.4rem\] {
   font-size: 1.4rem;
+}
+
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
+}
+
+.text-\[1\.43rem\] {
+  font-size: 1.43rem;
 }
 
 .font-bold {
@@ -1032,6 +1006,14 @@ video {
 
 .tracking-tight {
   letter-spacing: -0.025em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 
 .text-\[\#242424\] {
@@ -1065,48 +1047,96 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:ml-56 {
-    margin-left: 14rem;
-  }
-
   .lg\:ml-80 {
     margin-left: 20rem;
   }
 
-  .lg\:ml-60 {
-    margin-left: 15rem;
+  .lg\:mt-\[\.17rem\] {
+    margin-top: .17rem;
   }
 
-  .lg\:ml-44 {
-    margin-left: 11rem;
+  .lg\:mt-\[\.2rem\] {
+    margin-top: .2rem;
   }
 
-  .lg\:mt-7 {
-    margin-top: 1.75rem;
+  .lg\:mt-\[\.3rem\] {
+    margin-top: .3rem;
   }
 
-  .lg\:mt-4 {
-    margin-top: 1rem;
+  .lg\:mt-\[\.25rem\] {
+    margin-top: .25rem;
   }
 
-  .lg\:mt-2 {
-    margin-top: 0.5rem;
+  .lg\:ml-96 {
+    margin-left: 24rem;
+  }
+
+  .lg\:ml-\[30rem\] {
+    margin-left: 30rem;
+  }
+
+  .lg\:ml-\[33rem\] {
+    margin-left: 33rem;
+  }
+
+  .lg\:ml-\[31rem\] {
+    margin-left: 31rem;
+  }
+
+  .lg\:mr-4 {
+    margin-right: 1rem;
   }
 
   .lg\:mt-1 {
     margin-top: 0.25rem;
   }
 
-  .lg\:mt-\[\.15rem\] {
-    margin-top: .15rem;
+  .lg\:ml-\[29rem\] {
+    margin-left: 29rem;
   }
 
-  .lg\:ml-72 {
-    margin-left: 18rem;
+  .lg\:ml-\[29\.1remrem\] {
+    margin-left: 29.1remrem;
   }
 
-  .lg\:mt-\[\.17rem\] {
-    margin-top: .17rem;
+  .lg\:ml-\[29\.1rem\] {
+    margin-left: 29.1rem;
+  }
+
+  .lg\:ml-\[29\.13rem\] {
+    margin-left: 29.13rem;
+  }
+
+  .lg\:mt-\[\.14rem\] {
+    margin-top: .14rem;
+  }
+
+  .lg\:ml-\[29\.4rem\] {
+    margin-left: 29.4rem;
+  }
+
+  .lg\:ml-\[29\.2rem\] {
+    margin-left: 29.2rem;
+  }
+
+  .lg\:ml-\[27rem\] {
+    margin-left: 27rem;
+  }
+
+  .lg\:ml-\[28\.5rem\] {
+    margin-left: 28.5rem;
+  }
+
+  .lg\:ml-\[28rem\] {
+    margin-left: 28rem;
+  }
+
+  .lg\:ml-\[28\.7rem\] {
+    margin-left: 28.7rem;
+  }
+
+  .lg\:ml-\[28\.6rem\] {
+    margin-left: 28.6rem;
   }
 
   .lg\:inline {
@@ -1121,52 +1151,76 @@ video {
     display: none;
   }
 
-  .lg\:h-10 {
-    height: 2.5rem;
+  .lg\:h-\[3\.1rem\] {
+    height: 3.1rem;
   }
 
-  .lg\:h-32 {
-    height: 8rem;
+  .lg\:h-\[3\.2rem\] {
+    height: 3.2rem;
   }
 
-  .lg\:h-20 {
-    height: 5rem;
-  }
-
-  .lg\:h-14 {
-    height: 3.5rem;
+  .lg\:h-\[3\.15rem\] {
+    height: 3.15rem;
   }
 
   .lg\:h-11 {
     height: 2.75rem;
   }
 
-  .lg\:h-12 {
-    height: 3rem;
+  .lg\:h-\[2\.8rem\] {
+    height: 2.8rem;
   }
 
-  .lg\:h-\[3\.4rem\] {
-    height: 3.4rem;
+  .lg\:h-\[2\.9rem\] {
+    height: 2.9rem;
   }
 
-  .lg\:h-\[3\.1rem\] {
-    height: 3.1rem;
+  .lg\:h-\[2\.97rem\] {
+    height: 2.97rem;
   }
 
-  .lg\:w-32 {
-    width: 8rem;
+  .lg\:h-\[2\.94rem\] {
+    height: 2.94rem;
+  }
+
+  .lg\:h-\[2\.96rem\] {
+    height: 2.96rem;
+  }
+
+  .lg\:w-\[13\.5rem\] {
+    width: 13.5rem;
   }
 
   .lg\:w-56 {
     width: 14rem;
   }
 
-  .lg\:w-52 {
-    width: 13rem;
+  .lg\:w-\[13\.7rem\] {
+    width: 13.7rem;
   }
 
-  .lg\:w-64 {
-    width: 16rem;
+  .lg\:w-28 {
+    width: 7rem;
+  }
+
+  .lg\:w-32 {
+    width: 8rem;
+  }
+
+  .lg\:w-36 {
+    width: 9rem;
+  }
+
+  .lg\:w-\[13\.6rem\] {
+    width: 13.6rem;
+  }
+
+  .lg\:w-\[13\.8rem\] {
+    width: 13.8rem;
+  }
+
+  .lg\:w-\[13\.9rem\] {
+    width: 13.9rem;
   }
 
   .lg\:w-60 {
@@ -1177,22 +1231,16 @@ video {
     width: 14.5rem;
   }
 
-  .lg\:border-spacing-1 {
-    --tw-border-spacing-x: 0.25rem;
-    --tw-border-spacing-y: 0.25rem;
-    border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+  .lg\:w-\[8\.5rem\] {
+    width: 8.5rem;
   }
 
-  .lg\:border-spacing-2 {
-    --tw-border-spacing-x: 0.5rem;
-    --tw-border-spacing-y: 0.5rem;
-    border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+  .lg\:w-\[8\.7rem\] {
+    width: 8.7rem;
   }
 
-  .lg\:border-spacing-44 {
-    --tw-border-spacing-x: 11rem;
-    --tw-border-spacing-y: 11rem;
-    border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+  .lg\:w-\[8\.8rem\] {
+    width: 8.8rem;
   }
 
   .lg\:items-center {
@@ -1201,30 +1249,6 @@ video {
 
   .lg\:justify-center {
     justify-content: center;
-  }
-
-  .lg\:border-2 {
-    border-width: 2px;
-  }
-
-  .lg\:border-white {
-    --tw-border-opacity: 1;
-    border-color: rgb(255 255 255 / var(--tw-border-opacity));
-  }
-
-  .lg\:bg-\[\#242424\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(36 36 36 / var(--tw-bg-opacity));
-  }
-
-  .lg\:bg-\[\#202020\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(32 32 32 / var(--tw-bg-opacity));
-  }
-
-  .lg\:bg-\[\#161616\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(22 22 22 / var(--tw-bg-opacity));
   }
 
   .lg\:px-20 {
@@ -1237,8 +1261,28 @@ video {
     padding-bottom: 1rem;
   }
 
-  .lg\:text-\[\#242424\] {
-    --tw-text-opacity: 1;
-    color: rgb(36 36 36 / var(--tw-text-opacity));
+  .lg\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
+  .lg\:py-\[1\.1rem\] {
+    padding-top: 1.1rem;
+    padding-bottom: 1.1rem;
+  }
+
+  .lg\:py-\[1\.05rem\] {
+    padding-top: 1.05rem;
+    padding-bottom: 1.05rem;
+  }
+
+  .lg\:py-\[1\.2rem\] {
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
+  }
+
+  .lg\:py-\[1\.18rem\] {
+    padding-top: 1.18rem;
+    padding-bottom: 1.18rem;
   }
 }
