--- a/public/output.css
+++ b/public/output.css
@@ -623,24 +623,24 @@ video {
   margin-left: 0.75rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
+.ml-\[\.47rem\] {
+  margin-left: .47rem;
 }
 
-.ml-\[\.45rem\] {
-  margin-left: .45rem;
+.ml-\[\.85rem\] {
+  margin-left: .85rem;
 }
 
 .ml-\[5\.5rem\] {
   margin-left: 5.5rem;
 }
 
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
 .mr-7 {
   margin-right: 1.75rem;
+}
+
+.mr-\[\.55rem\] {
+  margin-right: .55rem;
 }
 
 .mr-\[\.5rem\] {
@@ -695,16 +695,12 @@ video {
   margin-top: 1.2rem;
 }
 
-.mt-\[3\.12rem\] {
-  margin-top: 3.12rem;
+.mt-\[3\.3rem\] {
+  margin-top: 3.3rem;
 }
 
 .mt-\[5\.7rem\] {
   margin-top: 5.7rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
 }
 
 .flex {
@@ -724,10 +720,6 @@ video {
   height: 2rem;
 }
 
-.h-14 {
-  height: 3.5rem;
-}
-
 .h-6 {
   height: 1.5rem;
 }
@@ -742,26 +734,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[3\.15rem\] {
-  height: 3.15rem;
-}
-
-.h-\[3\.13rem\] {
-  height: 3.13rem;
-}
-
-.h-\[3\.1rem\] {
-  height: 3.1rem;
-}
-
-.h-\[3rem\] {
-  height: 3rem;
-}
-
-.w-14 {
-  width: 3.5rem;
 }
 
 .w-64 {
@@ -822,10 +794,6 @@ video {
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
 }
 
 .border-\[1px\] {
@@ -896,17 +864,12 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .pb-\[\.9rem\] {
   padding-bottom: .9rem;
 }
 
-.pb-\[7\.35rem\] {
-  padding-bottom: 7.35rem;
+.pb-\[8rem\] {
+  padding-bottom: 8rem;
 }
 
 .pt-20 {
@@ -938,16 +901,16 @@ video {
   font-size: 1.29rem;
 }
 
-.text-\[1\.39rem\] {
-  font-size: 1.39rem;
-}
-
 .text-\[1\.45rem\] {
   font-size: 1.45rem;
 }
 
 .text-\[1\.51rem\] {
   font-size: 1.51rem;
+}
+
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
 }
 
 .text-\[2\.5rem\] {
@@ -966,18 +929,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-\[1\.4rem\] {
-  font-size: 1.4rem;
-}
-
-.text-\[1\.5rem\] {
-  font-size: 1.5rem;
-}
-
-.text-\[1\.43rem\] {
-  font-size: 1.43rem;
 }
 
 .font-bold {
@@ -1012,10 +963,6 @@ video {
   letter-spacing: 0.025em;
 }
 
-.tracking-wider {
-  letter-spacing: 0.05em;
-}
-
 .text-\[\#242424\] {
   --tw-text-opacity: 1;
   color: rgb(36 36 36 / var(--tw-text-opacity));
@@ -1047,100 +994,36 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:ml-80 {
-    margin-left: 20rem;
+  .lg\:right-\[\.8rem\] {
+    right: .8rem;
   }
 
-  .lg\:mt-\[\.17rem\] {
-    margin-top: .17rem;
+  .lg\:top-\[4\.8rem\] {
+    top: 4.8rem;
   }
 
-  .lg\:mt-\[\.2rem\] {
-    margin-top: .2rem;
+  .lg\:right-\[\.85rem\] {
+    right: .85rem;
   }
 
-  .lg\:mt-\[\.3rem\] {
-    margin-top: .3rem;
+  .lg\:top-\[4\.7rem\] {
+    top: 4.7rem;
   }
 
-  .lg\:mt-\[\.25rem\] {
-    margin-top: .25rem;
-  }
-
-  .lg\:ml-96 {
-    margin-left: 24rem;
-  }
-
-  .lg\:ml-\[30rem\] {
-    margin-left: 30rem;
-  }
-
-  .lg\:ml-\[33rem\] {
-    margin-left: 33rem;
-  }
-
-  .lg\:ml-\[31rem\] {
-    margin-left: 31rem;
-  }
-
-  .lg\:mr-4 {
-    margin-right: 1rem;
-  }
-
-  .lg\:mt-1 {
-    margin-top: 0.25rem;
-  }
-
-  .lg\:ml-\[29rem\] {
-    margin-left: 29rem;
-  }
-
-  .lg\:ml-\[29\.1remrem\] {
-    margin-left: 29.1remrem;
-  }
-
-  .lg\:ml-\[29\.1rem\] {
-    margin-left: 29.1rem;
-  }
-
-  .lg\:ml-\[29\.13rem\] {
-    margin-left: 29.13rem;
-  }
-
-  .lg\:mt-\[\.14rem\] {
-    margin-top: .14rem;
-  }
-
-  .lg\:ml-\[29\.4rem\] {
-    margin-left: 29.4rem;
-  }
-
-  .lg\:ml-\[29\.2rem\] {
-    margin-left: 29.2rem;
-  }
-
-  .lg\:ml-\[27rem\] {
-    margin-left: 27rem;
-  }
-
-  .lg\:ml-\[28\.5rem\] {
-    margin-left: 28.5rem;
-  }
-
-  .lg\:ml-\[28rem\] {
-    margin-left: 28rem;
-  }
-
-  .lg\:ml-\[28\.7rem\] {
-    margin-left: 28.7rem;
+  .lg\:top-\[4\.6rem\] {
+    top: 4.6rem;
   }
 
   .lg\:ml-\[28\.6rem\] {
     margin-left: 28.6rem;
   }
 
-  .lg\:inline {
-    display: inline;
+  .lg\:mr-4 {
+    margin-right: 1rem;
+  }
+
+  .lg\:mt-\[\.3rem\] {
+    margin-top: .3rem;
   }
 
   .lg\:flex {
@@ -1151,92 +1034,20 @@ video {
     display: none;
   }
 
-  .lg\:h-\[3\.1rem\] {
-    height: 3.1rem;
-  }
-
-  .lg\:h-\[3\.2rem\] {
-    height: 3.2rem;
+  .lg\:h-5 {
+    height: 1.25rem;
   }
 
   .lg\:h-\[3\.15rem\] {
     height: 3.15rem;
   }
 
-  .lg\:h-11 {
-    height: 2.75rem;
-  }
-
-  .lg\:h-\[2\.8rem\] {
-    height: 2.8rem;
-  }
-
-  .lg\:h-\[2\.9rem\] {
-    height: 2.9rem;
-  }
-
-  .lg\:h-\[2\.97rem\] {
-    height: 2.97rem;
-  }
-
-  .lg\:h-\[2\.94rem\] {
-    height: 2.94rem;
-  }
-
-  .lg\:h-\[2\.96rem\] {
-    height: 2.96rem;
-  }
-
-  .lg\:w-\[13\.5rem\] {
-    width: 13.5rem;
-  }
-
-  .lg\:w-56 {
-    width: 14rem;
-  }
-
-  .lg\:w-\[13\.7rem\] {
-    width: 13.7rem;
-  }
-
-  .lg\:w-28 {
-    width: 7rem;
-  }
-
-  .lg\:w-32 {
-    width: 8rem;
-  }
-
-  .lg\:w-36 {
-    width: 9rem;
-  }
-
-  .lg\:w-\[13\.6rem\] {
-    width: 13.6rem;
-  }
-
-  .lg\:w-\[13\.8rem\] {
-    width: 13.8rem;
-  }
-
-  .lg\:w-\[13\.9rem\] {
-    width: 13.9rem;
-  }
-
-  .lg\:w-60 {
-    width: 15rem;
+  .lg\:w-7 {
+    width: 1.75rem;
   }
 
   .lg\:w-\[14\.5rem\] {
     width: 14.5rem;
-  }
-
-  .lg\:w-\[8\.5rem\] {
-    width: 8.5rem;
-  }
-
-  .lg\:w-\[8\.7rem\] {
-    width: 8.7rem;
   }
 
   .lg\:w-\[8\.8rem\] {
@@ -1256,33 +1067,29 @@ video {
     padding-right: 5rem;
   }
 
-  .lg\:py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
-  .lg\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-
-  .lg\:py-\[1\.1rem\] {
-    padding-top: 1.1rem;
-    padding-bottom: 1.1rem;
-  }
-
-  .lg\:py-\[1\.05rem\] {
-    padding-top: 1.05rem;
-    padding-bottom: 1.05rem;
-  }
-
-  .lg\:py-\[1\.2rem\] {
-    padding-top: 1.2rem;
-    padding-bottom: 1.2rem;
+  .lg\:px-\[19\.7rem\] {
+    padding-left: 19.7rem;
+    padding-right: 19.7rem;
   }
 
   .lg\:py-\[1\.18rem\] {
     padding-top: 1.18rem;
     padding-bottom: 1.18rem;
+  }
+
+  .lg\:pb-\[7\.3rem\] {
+    padding-bottom: 7.3rem;
+  }
+
+  .lg\:pt-\[7\.75rem\] {
+    padding-top: 7.75rem;
+  }
+
+  .lg\:text-\[4\.8rem\] {
+    font-size: 4.8rem;
+  }
+
+  .lg\:tracking-\[-\.15rem\] {
+    letter-spacing: -.15rem;
   }
 }
