--- a/public/output.css
+++ b/public/output.css
@@ -736,6 +736,10 @@ video {
   height: 100vh;
 }
 
+.h-7 {
+  height: 1.75rem;
+}
+
 .w-64 {
   width: 16rem;
 }
@@ -762,6 +766,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .grid-cols-2 {
@@ -978,6 +986,237 @@ video {
 
   src: url("/public/fonts/gt-america-standard-medium-trial-webfont.woff2")
     format("woff2");
+}
+
+@media (min-width: 768px) {
+  .md\:mt-2 {
+    margin-top: 0.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:mr-36 {
+    margin-right: 9rem;
+  }
+
+  .lg\:mr-48 {
+    margin-right: 12rem;
+  }
+
+  .lg\:mr-56 {
+    margin-right: 14rem;
+  }
+
+  .lg\:mr-72 {
+    margin-right: 18rem;
+  }
+
+  .lg\:mr-80 {
+    margin-right: 20rem;
+  }
+
+  .lg\:mr-96 {
+    margin-right: 24rem;
+  }
+
+  .lg\:mr-\[27rem\] {
+    margin-right: 27rem;
+  }
+
+  .lg\:mr-\[26rem\] {
+    margin-right: 26rem;
+  }
+
+  .lg\:mr-\[26\.5rem\] {
+    margin-right: 26.5rem;
+  }
+
+  .lg\:mr-\[25rem\] {
+    margin-right: 25rem;
+  }
+
+  .lg\:mr-\[25\.5rem\] {
+    margin-right: 25.5rem;
+  }
+
+  .lg\:mr-\[26\.1rem\] {
+    margin-right: 26.1rem;
+  }
+
+  .lg\:mr-\[26\.3rem\] {
+    margin-right: 26.3rem;
+  }
+
+  .lg\:mr-\[26\.4rem\] {
+    margin-right: 26.4rem;
+  }
+
+  .lg\:mr-\[27\.5rem\] {
+    margin-right: 27.5rem;
+  }
+
+  .lg\:mr-\[27\.3rem\] {
+    margin-right: 27.3rem;
+  }
+
+  .lg\:mr-\[27\.4rem\] {
+    margin-right: 27.4rem;
+  }
+
+  .lg\:mr-\[27\.45rem\] {
+    margin-right: 27.45rem;
+  }
+
+  .lg\:ml-6 {
+    margin-left: 1.5rem;
+  }
+
+  .lg\:mr-1 {
+    margin-right: 0.25rem;
+  }
+
+  .lg\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .lg\:ml-24 {
+    margin-left: 6rem;
+  }
+
+  .lg\:ml-28 {
+    margin-left: 7rem;
+  }
+
+  .lg\:ml-\[6\.5rem\] {
+    margin-left: 6.5rem;
+  }
+
+  .lg\:ml-\[6\.2rem\] {
+    margin-left: 6.2rem;
+  }
+
+  .lg\:ml-\[6\.25rem\] {
+    margin-left: 6.25rem;
+  }
+
+  .lg\:mt-3 {
+    margin-top: 0.75rem;
+  }
+
+  .lg\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
+  .lg\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .lg\:mt-\[\.15rem\] {
+    margin-top: .15rem;
+  }
+
+  .lg\:w-\[32rem\] {
+    width: 32rem;
+  }
+
+  .lg\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .lg\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .lg\:px-14 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
+
+  .lg\:px-\[4\.5rem\] {
+    padding-left: 4.5rem;
+    padding-right: 4.5rem;
+  }
+
+  .lg\:px-\[4\.8rem\] {
+    padding-left: 4.8rem;
+    padding-right: 4.8rem;
+  }
+
+  .lg\:px-\[4\.9rem\] {
+    padding-left: 4.9rem;
+    padding-right: 4.9rem;
+  }
+
+  .lg\:px-\[4\.7rem\] {
+    padding-left: 4.7rem;
+    padding-right: 4.7rem;
+  }
+
+  .lg\:px-44 {
+    padding-left: 11rem;
+    padding-right: 11rem;
+  }
+
+  .lg\:px-36 {
+    padding-left: 9rem;
+    padding-right: 9rem;
+  }
+
+  .lg\:px-40 {
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+
+  .lg\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
+  .lg\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .lg\:py-7 {
+    padding-top: 1.75rem;
+    padding-bottom: 1.75rem;
+  }
+
+  .lg\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .lg\:px-\[3\.8rem\] {
+    padding-left: 3.8rem;
+    padding-right: 3.8rem;
+  }
+
+  .lg\:text-9xl {
+    font-size: 8rem;
+    line-height: 1;
+  }
+
+  .lg\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
+  }
+
+  .lg\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .lg\:text-\[5rem\] {
+    font-size: 5rem;
+  }
 }
 
 @media (min-width: 1280px) {
