--- a/public/output.css
+++ b/public/output.css
@@ -769,10 +769,6 @@ video {
   border-radius: .3rem;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -800,11 +796,6 @@ video {
 
 .border-gray {
   border-color: #FFFFFF70;
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-\[\#161616\] {
@@ -1076,6 +1067,10 @@ video {
     display: grid;
   }
 
+  .md\:hidden {
+    display: none;
+  }
+
   .md\:h-12 {
     height: 3rem;
   }
@@ -1243,92 +1238,32 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:ml-4 {
-    margin-left: 1rem;
+  .xl\:ml-3 {
+    margin-left: 0.75rem;
   }
 
   .xl\:ml-64 {
     margin-left: 16rem;
   }
 
-  .xl\:ml-\[28rem\] {
-    margin-left: 28rem;
-  }
-
-  .xl\:mr-8 {
-    margin-right: 2rem;
-  }
-
-  .xl\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .xl\:mt-11 {
-    margin-top: 2.75rem;
-  }
-
-  .xl\:mr-6 {
-    margin-right: 1.5rem;
+  .xl\:ml-\[34\.5rem\] {
+    margin-left: 34.5rem;
   }
 
   .xl\:mr-4 {
     margin-right: 1rem;
   }
 
-  .xl\:mr-3 {
-    margin-right: 0.75rem;
-  }
-
-  .xl\:ml-3 {
-    margin-left: 0.75rem;
+  .xl\:mt-0 {
+    margin-top: 0px;
   }
 
   .xl\:mt-1 {
     margin-top: 0.25rem;
   }
 
-  .xl\:ml-2 {
-    margin-left: 0.5rem;
-  }
-
-  .xl\:ml-\[31rem\] {
-    margin-left: 31rem;
-  }
-
-  .xl\:ml-\[38rem\] {
-    margin-left: 38rem;
-  }
-
-  .xl\:ml-\[39rem\] {
-    margin-left: 39rem;
-  }
-
-  .xl\:ml-\[38\.5rem\] {
-    margin-left: 38.5rem;
-  }
-
-  .xl\:ml-\[32rem\] {
-    margin-left: 32rem;
-  }
-
-  .xl\:ml-\[37rem\] {
-    margin-left: 37rem;
-  }
-
-  .xl\:ml-\[35rem\] {
-    margin-left: 35rem;
-  }
-
-  .xl\:ml-\[36rem\] {
-    margin-left: 36rem;
-  }
-
-  .xl\:ml-\[34rem\] {
-    margin-left: 34rem;
-  }
-
-  .xl\:ml-\[34\.5rem\] {
-    margin-left: 34.5rem;
+  .xl\:mt-11 {
+    margin-top: 2.75rem;
   }
 
   .xl\:flex {
@@ -1357,52 +1292,32 @@ video {
     height: 4rem;
   }
 
-  .xl\:h-\[3\.15rem\] {
-    height: 3.15rem;
-  }
-
   .xl\:h-9 {
     height: 2.25rem;
-  }
-
-  .xl\:h-10 {
-    height: 2.5rem;
   }
 
   .xl\:w-12 {
     width: 3rem;
   }
 
-  .xl\:w-20 {
-    width: 5rem;
-  }
-
-  .xl\:w-40 {
-    width: 10rem;
-  }
-
-  .xl\:w-\[23rem\] {
-    width: 23rem;
-  }
-
-  .xl\:w-\[8\.8rem\] {
-    width: 8.8rem;
-  }
-
-  .xl\:w-full {
-    width: 100%;
+  .xl\:w-16 {
+    width: 4rem;
   }
 
   .xl\:w-32 {
     width: 8rem;
   }
 
-  .xl\:w-16 {
-    width: 4rem;
+  .xl\:w-\[23rem\] {
+    width: 23rem;
   }
 
-  .xl\:grid-cols-\[auto\2c auto\] {
-    grid-template-columns: auto auto;
+  .xl\:w-full {
+    width: 100%;
+  }
+
+  .xl\:grid-cols-footer {
+    grid-template-columns: repeat(5, 14rem);
   }
 
   .xl\:items-center {
@@ -1418,14 +1333,9 @@ video {
          column-gap: 0.25rem;
   }
 
-  .xl\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-
-  .xl\:px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+  .xl\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
   .xl\:px-32 {
@@ -1433,9 +1343,19 @@ video {
     padding-right: 8rem;
   }
 
+  .xl\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .xl\:px-5 {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+  }
+
+  .xl\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .xl\:px-80 {
@@ -1443,9 +1363,9 @@ video {
     padding-right: 20rem;
   }
 
-  .xl\:py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
+  .xl\:py-1\.5 {
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
   }
 
   .xl\:py-4 {
@@ -1458,71 +1378,8 @@ video {
     padding-bottom: 11rem;
   }
 
-  .xl\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
-  .xl\:py-1 {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-  }
-
-  .xl\:py-1\.5 {
-    padding-top: 0.375rem;
-    padding-bottom: 0.375rem;
-  }
-
-  .xl\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
-  .xl\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .xl\:px-7 {
-    padding-left: 1.75rem;
-    padding-right: 1.75rem;
-  }
-
-  .xl\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .xl\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-
-  .xl\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
-  .xl\:px-14 {
-    padding-left: 3.5rem;
-    padding-right: 3.5rem;
-  }
-
-  .xl\:pl-4 {
-    padding-left: 1rem;
-  }
-
   .xl\:pl-3 {
     padding-left: 0.75rem;
-  }
-
-  .xl\:pl-2 {
-    padding-left: 0.5rem;
-  }
-
-  .xl\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 
   .xl\:text-6xl {
@@ -1633,10 +1490,6 @@ video {
 
   .\32xl\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .\32xl\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .\32xl\:px-20 {
