--- a/public/output.css
+++ b/public/output.css
@@ -1266,6 +1266,38 @@ video {
     margin-top: 2.75rem;
   }
 
+  .xl\:mt-3 {
+    margin-top: 0.75rem;
+  }
+
+  .xl\:mt-4 {
+    margin-top: 1rem;
+  }
+
+  .xl\:mt-7 {
+    margin-top: 1.75rem;
+  }
+
+  .xl\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .xl\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
+  .xl\:block {
+    display: block;
+  }
+
+  .xl\:inline-block {
+    display: inline-block;
+  }
+
+  .xl\:inline {
+    display: inline;
+  }
+
   .xl\:flex {
     display: flex;
   }
@@ -1282,6 +1314,16 @@ video {
   .xl\:size-9 {
     width: 2.25rem;
     height: 2.25rem;
+  }
+
+  .xl\:size-3 {
+    width: 0.75rem;
+    height: 0.75rem;
+  }
+
+  .xl\:size-7 {
+    width: 1.75rem;
+    height: 1.75rem;
   }
 
   .xl\:h-11 {
@@ -1318,6 +1360,10 @@ video {
 
   .xl\:grid-cols-footer {
     grid-template-columns: repeat(5, 14rem);
+  }
+
+  .xl\:flex-col {
+    flex-direction: column;
   }
 
   .xl\:items-center {
@@ -1382,6 +1428,18 @@ video {
     padding-left: 0.75rem;
   }
 
+  .xl\:pb-14 {
+    padding-bottom: 3.5rem;
+  }
+
+  .xl\:text-left {
+    text-align: left;
+  }
+
+  .xl\:text-center {
+    text-align: center;
+  }
+
   .xl\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
@@ -1390,6 +1448,30 @@ video {
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .xl\:font-medium {
+    font-weight: 500;
   }
 
   .xl\:placeholder\:text-xl::-moz-placeholder {
